[tool.poetry]
name = "behavior-oscillation-visualizer"
version = "0.1.0"
description = ""
authors = ["Laurens Müller-Groh <lamu@uni-bremen.de>"]
packages = [{include = "behavior_oscillation_visualizer"}]

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.informatik.uni-bremen.de/api/v4/projects/7408/packages/pypi/simple"
priority = "explicit"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.10"
pybh = { version="==0.3.5", source="gitlab" }
click = "^8.1.3"
# colorama = "^0.4.6"
tqdm = "^4.65.0"
rich = "^13.3.5"
# textual = "^0.23.0"
plotext = "^5.2.8"
numpy = "^1.25.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.264"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = [ "py310" ]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["behavior_oscillation_visualizer"]
